--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    maven { url 'http://repo.spongepowered.org/maven' }
+    maven { url 'https://libraries.minecraft.net' }
     maven { url 'https://jitpack.io/' }
 }
 
@@ -27,7 +29,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation 'com.github.Querz:NBT:5.2'
     implementation 'net.sf.jopt-simple:jopt-simple:5.0.4'
-    implementation 'com.github.Minestom:Minestom:ac758e4acb'
+    implementation 'com.github.minestom:minestom:-SNAPSHOT'
 }
 jar {
     manifest {
