--- a/build.gradle
+++ b/build.gradle
@@ -20,14 +20,15 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
-    maven { url 'http://repo.spongepowered.org/maven' }
+    maven { url 'https://repo.spongepowered.org/maven' }
+    maven { url 'https://repo.velocitypowered.com/snapshots/' }
     maven { url 'https://libraries.minecraft.net' }
     maven { url 'https://jitpack.io/' }
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    implementation 'com.github.Querz:NBT:5.2'
+    implementation 'com.github.Querz:NBT:6.1'
     implementation 'net.sf.jopt-simple:jopt-simple:5.0.4'
     implementation 'com.github.minestom:minestom:-SNAPSHOT'
 }
